2005-04-11  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b7

	* Fix: getFile() failed to call fs_import_filename on Windows when
	  using file_get_contents - this caused problems with the old UserDB
	  format.

2005-04-09  Jens A. Tkotz <jens@peino.de>  1.5-RC4-CVS-b6

	* Fix: gallery_mail added unneeded (and invalid) second to: header.

2005-04-08  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b5

	* Fix: Setup was using an incorrect string value for the thumbnails RSS option

	* Fix: Captions were not being properly included in RSS when thumbs-with-captions
	  was selected in the config wizard.

2005-04-07  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b4

	* Fix: When displaying a single column in view_album, don't try to 
	  pad the row height to match other columns

2005-04-07  Jens A. Tkotz <jens@peino.de>  1.5-RC4-CVS-b3

	* Fix: $iconelement was not correct initialized.

2005-04-05  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b2

	* Fix: Incorrect variable being referenced when setting a movie as
	  highlight resulted in a missing highlight thumbnail.

2005-04-05  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b1

	* Fix: lib/Form.php - remove the newlines from selectOptions.
	  The High slideshow uses selectOptions in JS with document.write
	  which is incapable of handling newlines in its data.

2005-04-04  Chris Kelly <ckdake@users.sf.net> 1.5-RC3

	* 1.5-RC3 Release

2005-04-01  Jens A. Tkotz <jens@peino.de>  1.5-RC3-cvs-b23

	* "Fix": highest rating code in stats was broken -> commented out

2005-03-30  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC3-cvs-b22

	* Fix: Logged in users now no longer use the stats cache - this will
	  prevent issues when using stats filters (which only logged-in users can see)
	  and should alleviate a possible caching-permissions/exposure bug.

	* Change: Removed some dead, commented code.

2005-03-29  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC3-cvs-b21
