@@ -1,3 +1,8 @@
+2005-04-13  Jens A. Tkotz <jens@peino.de>  1.5-RC4-CVS-b8
+
+	* Fix: Album Navigation ignored returnto=no in the middle.
+	       Result was that anytime the full line was showed.
+
 2005-04-11  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b7
 
 	* Fix: getFile() failed to call fs_import_filename on Windows when
